# repology-rs

./: .gitignore  .gitmodules  .insta.yaml  Cargo.toml  Makefile  README.md
.cargo/: config.toml
libversion/: Cargo.toml  LICENSE  README.md
libversion/src/: component.rs  iter.rs  lib.rs  parse.rs  string.rs
repology-admin/: Cargo.toml  README.md
repology-admin/src/: app.rs  components.rs  config.rs  handlers.rs  html.rs  main.rs
repology-admin/src/components/: cpe.rs  cpe_item.rs  cpe_items.rs  cve.rs  cves.rs  report.rs  reports.rs
repology-admin/src/handlers/: cpes.rs  cves.rs  index.rs  reports.rs  static.rs
repology-admin/static/: repology-admin.css
repology-common/: Cargo.toml
repology-common/.cargo/: config.toml
repology-common/src/: lib.rs  link_status.rs  link_type.rs  migrations.rs  package_flags.rs  package_status.rs
repology-linkchecker/: Cargo.toml  hosts.toml
repology-linkchecker/src/: checker.rs  config.rs  delayer.rs  errors.rs  feeder.rs  hosts.rs  http_client.rs  main.rs  mainloop.rs  optional_semaphore.rs  queuer.rs  resolver.rs  status.rs  updater.rs
repology-linkchecker/src/http_client/: native.rs  python.rs  tests.rs
repology-linkchecker/src/updater/: tests.rs
repology-linkchecker/tests/fixtures/: example_link.sql
repology-updater/: Cargo.toml
repology-updater/src/: config.rs  fetching.rs  lib.rs  main.rs  package.rs  parsing.rs  raw_commands.rs  repositories_config.rs  ruleset.rs  utils.rs
repology-updater/src/fetching/: fetcher.rs  fetchers.rs  http.rs  io.rs  metadata.rs  politeness.rs  utils.rs
repology-updater/src/parsing/: error.rs  package_maker.rs  parser.rs  parsers.rs  sink.rs  sinks.rs  testing.rs  utils.rs
repology-updater/src/snapshots/: repology_updater__repositories_config__tests__allflags.snap  repology_updater__ruleset__tests__allflags.snap  repology_updater__ruleset__tests__hier.snap  repology_updater__ruleset__tests__simple_cases.snap
repology-updater/src/utils/: transact_dir.rs
repology-updater/tests/: parsers.rs  repositories_config.rs  ruleset.rs
repology-updater/tests/parser_tests/: freebsd.rs  mod.rs  tincan.rs  yacp.rs
repology-updater/tests/snapshots/: parsers__freebsd_error_bad_package_format.snap  parsers__freebsd_error_bad_package_path.snap  parsers__freebsd_error_extra_field.snap  parsers__freebsd_error_missing_field.snap  parsers__freebsd_error_missing_name.snap  parsers__freebsd_error_missing_version.snap  parsers__freebsd_ok.snap  parsers__stalix_error_bad_json.snap  parsers__stalix_error_bad_lang_module.snap  parsers__stalix_ok.snap  parsers__tincan_ok.snap  parsers__yacp_ok.snap  repositories_config__allflags.snap  ruleset__allflags.snap  ruleset__hier.snap  ruleset__parse_ruleset_allflags.snap  ruleset__parse_ruleset_hier.snap  ruleset__parse_ruleset_simple_cases.snap  ruleset__simple_cases.snap
repology-vulnupdater/: Cargo.toml
repology-vulnupdater/migrations/: 20240930221045_Create_tables.sql
repology-vulnupdater/src/: args.rs  cpe.rs  datasources.rs  datetime.rs  fetcher.rs  main.rs  processors.rs  status_tracker.rs  update.rs  vulnupdater.rs
repology-vulnupdater/src/processors/: cpe.rs  cpe_dict.rs  cve.rs  cve_feed.rs
repology-webapp/: Cargo.toml
repology-webapp-test-utils/: Cargo.toml
repology-webapp-test-utils/src/: http.rs  legacy_macros.rs  lib.rs  request_response.rs  tidy.rs
repology-webapp-test-utils/tests/: integration.rs
repology-webapp-test-utils/tests/integration_tests/: body.rs  headers.rs  html.rs  json.rs  mod.rs  snapshot.rs  status.rs  text.rs  xml.rs
repology-webapp/src/: background_tasks.rs  badges.rs  config.rs  constants.rs  endpoints.rs  extractors.rs  feeds.rs  font.rs  graphs.rs  handlers.rs  lib.rs  main.rs  middleware.rs  package.rs  query.rs  repository_data.rs  result.rs  routes.rs  state.rs  static_files.rs  template_context.rs  template_funcs.rs  url_for.rs  views.rs  xmlwriter.rs
repology-webapp/src/config/: types.rs
repology-webapp/src/handlers/: api.rs  graph.rs  index.rs  legacy_redirects.rs  link.rs  log.rs  maintainers.rs  opensearch.rs  problems.rs  repository.rs  security.rs  sitemaps.rs  static_files.rs  tools.rs  trivial_pages.rs
repology-webapp/src/middleware/: headers.rs  metrics.rs
repology-webapp/src/package/: ordering.rs  processing.rs  summarization.rs  traits.rs  version.rs
repology-webapp/src/views/: badges.rs  graph.rs  index.rs  legacy_redirects.rs  link.rs  log.rs  maintainer.rs  maintainers.rs  opensearch.rs  project.rs  projects.rs  repositories.rs  repository.rs  security.rs  sitemaps.rs  static_files.rs  tools.rs  trivial_pages.rs
repology-webapp/templates/: _base.html  api.html  index.html  link.html  log.html  maintainer.html  news.html  repository.html
repology-webapp/templates/_includes/: supported_repos.html
repology-webapp/templates/_macros/: autorefresh.html  cpes.html  link_status.html  links.html  projects_table.html  time.html
repology-webapp/templates/docs/: about.html  bots.html  index.html  not_supported.html  requirements.html
repology-webapp/templates/maintainer/: gone.html  repo-feed.html  unknown.html
repology-webapp/templates/maintainers/: index.html
repology-webapp/templates/opensearch/: maintainer.xml  project.xml
repology-webapp/templates/problems/: index.html
repology-webapp/templates/project/: 404.html  410.html  _base.html  badges.html  cves.html  history.html  information.html  packages.html  related.html  report.html  versions-compact.html  versions.html
repology-webapp/templates/projects/: index.html
repology-webapp/templates/repositories/: _base.html  fields.html  graphs.html  packages.html  statistics.html  updates.html
repology-webapp/tests/: api.rs  badges.rs  endpoints.rs  feeds.rs  graphs.rs  integration.rs  legacy_redirects.rs  log.rs  maintainer.rs  opensearch.rs  problems.rs  project.rs  projects.rs  repository.rs  snapshot.rs  static_file.rs  tool_project_by.rs  trivial_pages.rs
repology_webapp/: Cargo.toml
repology_webapp/src/: badges.rs  font.rs  main.rs  package.rs  query.rs  repometadata.rs  state.rs  views.rs  xmlwriter.rs
(+588 files in other folders)
