[workspace]
members = ["repology-admin", "repology-common", "repology-webapp", "libversion", "repology-webapp-test-utils", "repology-vulnupdater", "repology-linkchecker", "repology-updater"]
resolver = "3"

[workspace.lints.clippy]
manual_let_else = "warn"
clone_on_ref_ptr = "warn"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[patch.crates-io]
# Using dev branch until mainline supports matchit >=0.8.6
axum-core = { git = "https://github.com/AMDmi3/axum.git", branch = "dm/matchit-8-6" }
