[package]
name = "repology-admin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.101"
# Using dev branch until mainline supports matchit >=0.8.6
#axum = { version = "0.8.1", features = ["macros"] }
axum = { git = "https://github.com/AMDmi3/axum.git", branch = "dm/matchit-8-6", features = ["macros"] }
axum-htmx = "0.8.1"
chrono = { version = "0.4.43", features = ["std", "now", "serde"], default-features = false }
clap = { version = "4.5.54", features = ["derive"] }
indoc = "2.0.7"
maud = { version = "0.27.0", features = ["axum"] }
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", features = ["http-listener"] }
metrics-process = { version = "2.4.2", features = ["use-gauge-on-cpu-seconds-total"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-loki = { version = "0.2.6", default-features = false, features = ["compat-0-2-1"] }
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
