[package]
name = "repology-common"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_repr = "0.1.19"
sqlx = { version = "0.8.3", default-features = false, features = ["derive", "migrate", "macros"] }
strum = { version = "0.27.0", features = ["strum_macros"] }
strum_macros = "0.27.0"
