[package]
name = "repology-common"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
sqlx = { version = "0.8.5", default-features = false, features = ["derive", "migrate", "macros"] }
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
tracing = "0.1.41"
