[package]
name = "repology-common"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bitflags = "2.9.4"
serde = { version = "1.0.224", features = ["derive"] }
serde_repr = "0.1.20"
sqlx = { version = "0.8.6", default-features = false, features = ["derive", "migrate", "macros"] }
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
