[package]
name = "repology-linkchecker"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["std", "now", "serde"], default-features = false }
clap = { version = "4.5.40", features = ["derive"] }
h2 = { version = "0.4.11", default-features = false }
hickory-resolver = "0.25.2"
http = "1.3.1"
hyper = "1.6.0"
indoc = "2.0.6"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", features = ["http-listener"] }
metrics-process = { version = "2.4.0", features = ["use-gauge-on-cpu-seconds-total"] }
rand = "0.9.1"
repology-common = { path = "../repology-common" }
# if ever switching to native-tls, don't forget to also enable native-tls-alpn
# feature, see https://github.com/seanmonstar/reqwest/discussions/2227
reqwest = { version = "0.12.22", default-features = false, features = ["http2", "rustls-tls", "rustls-tls-native-roots"] }
rustls = { version = "0.23.28", default-features = false }
rustls-webpki = { version = "0.103.3", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.45.1", features = ["macros", "process", "rt-multi-thread"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-loki = { version = "0.2.6", default-features = false, features = ["compat-0-2-1"] }
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
# Using dev branch until mainline supports matchit >=0.8.6
#axum = { version = "0.8.1", features = ["macros"] }
axum = { git = "https://github.com/AMDmi3/axum.git", branch = "dm/matchit-8-6", features = ["macros"] }
