[package]
name = "repology-linkchecker"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["std", "now", "serde"], default-features = false }
clap = { version = "4.5.54", features = ["derive"] }
h2 = { version = "0.4.13", default-features = false }
hickory-resolver = "0.25.2"
http = "1.4.0"
hyper = "1.8.1"
indoc = "2.0.7"
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", features = ["http-listener"] }
metrics-process = { version = "2.4.2", features = ["use-gauge-on-cpu-seconds-total"] }
rand = "0.9.2"
repology-common = { path = "../repology-common" }
# if ever switching to native-tls, don't forget to also enable native-tls-alpn
# feature, see https://github.com/seanmonstar/reqwest/discussions/2227
reqwest = { version = "0.13.1", default-features = false, features = ["http2"] }
rustls = { version = "0.23.36", default-features = false }
rustls-webpki = { version = "0.103.8", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.49.0", features = ["macros", "process", "rt-multi-thread"] }
toml = { version = "0.9.11", default-features = false, features = ["std", "serde", "parse"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-loki = { version = "0.2.6", default-features = false, features = ["compat-0-2-1"] }
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
# Using dev branch until mainline supports matchit >=0.8.6
#axum = { version = "0.8.1", features = ["macros"] }
axum = { git = "https://github.com/AMDmi3/axum.git", branch = "dm/matchit-8-6", features = ["macros"] }
