[package]
name = "repology-updater"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[lints]
workspace = true

[features]
strict-parsers = []

[dependencies]
anyhow = "1.0.100"
async-compression = { version = "0.4.33", features = ["gzip", "bzip2", "xz", "zstd", "tokio"] }
async-rayon = "0.1.0"
async-trait = "0.1.89"
bitflags = "2.10.0"
clap = { version = "4.5.51", features = ["derive"] }
faine = { version = "0.2.1", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
pyo3 = { version = "0.27.1", features = ["auto-initialize"] }
rayon = "1.11.0"
regex = "1.12.2"
repology-common = { path = "../repology-common" }
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "rustls-tls", "rustls-tls-native-roots", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = { git = "https://github.com/bourumir-wyngs/serde-saphyr", branch = "master" }
serde-xml-rs = "0.8.1"
#serde-saphyr = "0.0.8"
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tera = { version = "1.20.1", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["io"] }
toml = { version = "0.9.8", default-features = false, features = ["std", "serde", "parse"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter"] }
url = "2.5.7"
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.43.2"
mockito = "1.7.1"
paste = "1.0.15"
tempfile = "3.23.0"
