[package]
name = "repology-updater"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
strict-parsers = []

[dependencies]
anyhow = "1.0.102"
async-compression = { version = "0.4.42", features = ["gzip", "bzip2", "xz", "zstd", "tokio"] }
async-rayon = "0.1.0"
async-trait = "0.1.89"
bitflags = "2.11.0"
clap = { version = "4.6.1", features = ["derive"] }
faine = { version = "0.2.1", default-features = false }
futures-util = { version = "0.3.32", default-features = false }
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
rayon = "1.12.0"
regex = "1.12.3"
repology-common = { path = "../repology-common" }
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.21"
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
tera = { version = "1.20.1", default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["macros", "process", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = { version = "1.1.2", default-features = false, features = ["std", "serde", "parse"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.46.3"
mockito = "1.7.2"
paste = "1.0.15"
tempfile = "3.26.0"
