[package]
name = "repology-vulnupdater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
clap = { version = "4.5.37", features = ["derive"] }
indoc = "2.0.6"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.0", default-features = false, features = ["http-listener"] }
metrics-process = { version = "2.4.0", features = ["use-gauge-on-cpu-seconds-total"] }
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
