[package]
name = "repology-vulnupdater"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["now"] }
clap = { version = "4.5.48", features = ["derive"] }
indoc = "2.0.6"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = ["http-listener"] }
metrics-process = { version = "2.4.0", features = ["use-gauge-on-cpu-seconds-total"] }
reqwest = { version = "0.12.23", features = ["stream"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-loki = { version = "0.2.6", default-features = false, features = ["compat-0-2-1"] }
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter"] }
url = "2.5.7"
