[package]
name = "repology-webapp-test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
# Using dev branch until mainline supports matchit >=0.8.6
#axum = { version = "0.8.1" }
axum = { git = "https://github.com/AMDmi3/axum.git", branch = "dm/matchit-8-6" }
bytes = "1.9.0"
json = "0.12.4"
mime = "0.3.17"
pretty_assertions = "1.4.1"
regex = "1.11.1"
repology-webapp = { path = "../repology-webapp" }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tidy-sys = "0.8.2"
tower-service = "0.3.3"
