[package]
name = "repology-webapp-test-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Using dev branch until mainline supports matchit >=0.8.6
#axum = { version = "0.8.1" }
axum = { git = "https://github.com/AMDmi3/axum.git", branch = "dm/matchit-8-6" }
bitflags = "2.10.0"
bytes = "1.11.0"
cityhasher = "0.1.0"
http = "1.4.0"
ip_network = "0.4.1"
repology-webapp = { path = "../repology-webapp" }
serde = "1.0.228"
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
thiserror = "2.0.17"
tidy-sys = "0.8.4"
tower-service = "0.3.3"

[dev-dependencies]
insta = "1.46.0"
tokio = "1.49.0"
