[package]
name = "repology-webapp"
version = "0.1.0"
edition = "2024"

[lints.clippy]
manual_let_else = "warn"

[features]
coverage = []  # used to calculate coverage correctly (see https://github.com/rust-lang/rust/issues/110486)

[dependencies]
anyhow = "1.0.95"
askama = "0.12.1"
# Using dev branch until mainline supports matchit >=0.8.6
#axum = { version = "0.8.1", features = ["macros"] }
axum = { git = "https://github.com/AMDmi3/axum.git", branch = "dm/matchit-8-6", features = ["macros"] }
chrono = { version = "0.4.39", default-features = false, features = ["std", "now"] }
cityhasher = "0.1.0"
clap = { version = "4.5.27", features = ["derive"] }
flate2 = "1.0.35"
include_dir = { version = "0.7.4", features = ["glob", "nightly"] }
indexmap = "2.7.1"
indoc = "2.0.5"
itertools = "0.14.0"
libversion = { path = "../libversion" }
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false, features = ["http-listener"] }
metrics-process = { version = "2.4.0", features = ["use-gauge-on-cpu-seconds-total"] }
mime = "0.3.17"
num-traits = "0.2.19"
permutation = "0.4.1"
repology-common = { path = "../repology-common" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
strum = { version = "0.26.3", features = ["strum_macros", "derive"] }
strum_macros = "0.26.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
ttf-parser = "0.25.1"
url = "2.5.4"
url-escape = "0.1.1"

[dev-dependencies]
float-cmp = "0.10.0"
insta = "1.42.1"
repology-webapp-test-utils = { path = "../repology-webapp-test-utils" }
tower-service = "0.3.3"
