[package]
name = "repology-webapp"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[lints]
workspace = true

[features]
coverage = []  # used to calculate coverage correctly (see https://github.com/rust-lang/rust/issues/110486)

[dependencies]
anyhow = "1.0.100"
# Need a release containing https://github.com/askama-rs/askama/pull/400
askama = "0.14.0"
# Using dev branch until mainline supports matchit >=0.8.6
#axum = { version = "0.8.1", features = ["macros"] }
axum = { git = "https://github.com/AMDmi3/axum.git", branch = "dm/matchit-8-6", features = ["macros"] }
chrono = { version = "0.4.42", default-features = false, features = ["std", "now"] }
cityhasher = "0.1.0"
clap = { version = "4.5.51", features = ["derive"] }
flate2 = "1.1.5"
include_dir = { version = "0.7.4", features = ["glob", "nightly"] }
indexmap = "2.12.0"
indoc = "2.0.7"
ip_network = { version = "0.4.1", features = ["serde"] }
itertools = "0.14.0"
libversion = { path = "../libversion" }
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.18.0", default-features = false, features = ["http-listener"] }
metrics-process = { version = "2.4.2", features = ["use-gauge-on-cpu-seconds-total"] }
mime = "0.3.17"
num-traits = "0.2.19"
permutation = "0.4.1"
repology-common = { path = "../repology-common" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
strum = { version = "0.27.2", features = ["strum_macros", "derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.9.8", default-features = false, features = ["std", "serde", "parse"] }
tower-cookies = "0.11.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-loki = { version = "0.2.6", default-features = false, features = ["compat-0-2-1"] }
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter"] }
ttf-parser = "0.25.1"
url = "2.5.7"
url-escape = "0.1.1"

[dev-dependencies]
float-cmp = "0.10.0"
http = "1.3.1"
insta = { version = "1.43.2", features = ["json"] }
pretty_assertions = "1.4.1"
regex = "1.12.2"
repology-webapp-test-utils = { path = "../repology-webapp-test-utils" }
tower-service = "0.3.3"
