[package]
name = "repology_webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
repology_common = { path = "../repology_common" }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres"] }
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
mime = "0.3.17"
ttf-parser = "0.24.1"
